--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,10 @@
   		<artifactId>owlexplanation</artifactId>
   		<version>1.1.0</version>
   	</dependency>
+  	<dependency>
+  		<groupId>findj</groupId>
+  		<artifactId>findj</artifactId>
+  		<version>0.0.1-SNAPSHOT</version>
+  	</dependency>
   </dependencies>
 </project>
